<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BodyTemp</string>
    <string name="action_add">Add</string>
    <string name="action_import">Import (from clipboard)</string>
    <string name="action_export">Export (to clipboard)</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_edit_info">EditInfo</string>
    <string name="hello_world">Hello world!</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="body_temperature">Body Temperature</string>
    <string name="comment">Comment</string>

</resources>
