<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="me.ryey.bodytemp.MainActivity" >
    
    <item
        android:id="@+id/action_add"
        android:showAsAction="ifRoom"
        android:title="@string/action_add">
    </item>
    <item
        android:id="@+id/action_import"
        android:orderInCategory="99"
        android:showAsAction="never"
        android:title="@string/action_import">
    </item>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    <item android:id="@+id/action_export" android:title="@string/action_export" android:orderInCategory="98"></item>

</menu>
